--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,2 +1,3 @@
 .footer
-  .container All rights reserved. &copy; 2017 Myongji University.
+  .container All rights reserved. &copy; 2018 Data Technology.dept of Myongji University.
+
