--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -1,25 +1,25 @@
 .header.clearfix
   nav.navbar.navbar-expand-md.navbar-dark.bg-dark.fixed-top
     .container
-      a.navbar-brand(href="/") MJ Overflow
+      a.navbar-brand(href="/") 공모전 정보 모음
       button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarsExampleDefault", aria-controls="navbarsExampleDefault", aria-expanded="false", aria-label="Toggle navigation")
         span.navbar-toggler-icon
 
       #navbarsExampleDefault.collapse.navbar-collapse
         ul.navbar-nav.ml-auto
           li.nav-item
-            a.nav-link(href="/questions") Questions
+            a.nav-link(href="/questions") 공모전 신청/등록
           li.nav-item
-            a.nav-link(href="/users") Users
+            a.nav-link(href="/users") 사용자
           if (!currentUser) 
             li.nav-item
-              a.nav-link(href='/signin') Signin
+              a.nav-link(href='/signin') 로그인
             li.nav-item
-              a.nav-link(href='/users/new') Signup
+              a.nav-link(href='/users/new') 회원가입
           else
             li.nav-item
-              a.nav-link(href=`/users/${currentUser._id}`) My Profile
+              a.nav-link(href=`/users/${currentUser._id}`) 내 프로필
             li.nav-item
-              a.nav-link(href='/signout') Signout
+              a.nav-link(href='/signout') 로그아웃
         
           
