--- a/views/index.pug
+++ b/views/index.pug
@@ -8,13 +8,12 @@ block content
   .container
     .row
       .col-md-6
-        h3 서비스 목적!!!!
-        p 본 서비스는 웹프로그래밍 수업을 위해서 sample로 만들어보는 것입니다. 
+        h3 서비스 목적
+        p 본 서비스는 각종 공모전 정보와 각종 대외활동 자료를 모아놓은 정보사이트입니다.
       .col-md-6
         h3 주요 기능
         ul
-          li 질문글 등록/보기/변경/삭제
-          li 답변글 등록/삭제
+          li 공모전 보기
+          li 공모전 등록/삭제/변경/신청
           li 사용자 관리/인증
-          li API
 
