--- a/views/questions/_question.pug
+++ b/views/questions/_question.pug
@@ -11,7 +11,7 @@
       #[span.number.num-views= question.numReads] reads
   .col-sm
     .author
-      | asked on #{moment(question.createdAt).format('YYYY-MM-DD')}
+      | 작성시간 #{moment(question.createdAt).format('YYYY-MM-DD')}
       if question.author
         | 
-        | by #[a(href=`/users/${question.author.id}`)= question.author.name] 
+        | 작성자 #[a(href=`/users/${question.author.id}`)= question.author.name] 
