--- a/views/questions/edit.pug
+++ b/views/questions/edit.pug
@@ -2,7 +2,10 @@ extends ../layout
 
 block content
   .container
-    h1.main-title Edit Question
+    if questions.id
+      h1.main-title 공모전 수정
+    else
+      h1.main-title 공모전 등록
     form(action=`/questions/${question.id}`, method="POST")
       input(type="hidden", name="_method", value="PUT")
       include _form
