--- a/views/questions/show.pug
+++ b/views/questions/show.pug
@@ -8,24 +8,24 @@ block content
       include _question
 
       .buttons
-        button.btn.btn-primary #[i.fa.fa-thumbs-up] Like
+        button.btn.btn-primary #[i.fa.fa-thumbs-up] 좋아요
         | 
-        a.btn.btn-outline-secondary(href=`/questions/${question.id}/edit`) Edit
+        a.btn.btn-outline-secondary(href=`/questions/${question.id}/edit`) 수정
         | 
-        a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/questions/${question.id}?_method=delete`) Delete
+        a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/questions/${question.id}?_method=delete`) 삭제
       
     if question.numAnswers > 0
       hr
-      h3 #{question.numAnswers} Answer(s)
+      h3 #{question.numAnswers} 문의사항(s)
       .answers.show
         each answer in answers
           include _answer
 
     form(action=`/questions/${question.id}/answers`, method='POST')
       .form-group
-        label(for='answer') Your Answer
+        label(for='answer') 문의사항
         textarea.form-control(name="content", rows="5")
-      button.btn.btn-primary(type="submit") Post Your Answer
+      button.btn.btn-primary(type="submit") 문의사항을 남겨주세요.
 
   script.
     $(function() {
