--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -2,29 +2,31 @@ extends ../layout
 
 block content
   .container
-    h1.main-title Users
+    h1.main-title 회원목록
     
     table.table.table-hover
       thead
         tr
-          th Name
-          th Email
-          th Created At
+          th 이름
+          th 이메일
+          th 가입일시
+          th 회원구분
           th
       tbody
-        // 유저의 정보 들어가있음
+ 
         each user in users
           tr
             td
-              // 다른 변수의 값을 합쳐서 string making ``
-              a(href=`/users/${user._id}`)= user.name // value가 찍혀 들어감
+         
+              a(href=`/users/${user._id}`)= user.name 
             td= user.email
-            //moment - 날짜 관련되서 기능을 하는 라이브러리
+           
             td= moment(user.createdAt).format('YYYY-MM-DD HH:mm:ss')
+            td= user.using
             td
               a.btn.btn-sm.btn-outline-secondary(href=`/users/${user._id}/edit`) 
-                | #[i.fa.fa-pencil] Edit
+                | #[i.fa.fa-pencil] 수정
               | 
               a.btn.btn-sm.btn-outline-danger(href=`/users/${user._id}?_method=DELETE`)
-                | #[i.fa.fa-trash] Delete
-    a.btn.btn-primary(href='/users/new') #[i.fa.fa-plus] Register a new user
+                | #[i.fa.fa-trash] 삭제
+    a.btn.btn-primary(href='/users/new') #[i.fa.fa-plus] 사용자 추가
