--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -12,10 +12,13 @@ block content
       dt.col-sm-3 Created At
       dd.col-sm-9= user.createdAt
 
+      dt.col-sm-3 회원구분
+      dd.col-sm-9=user.using
+
     hr
     p
-      a.btn.btn-outline-secondary(href='/users/') List
+      a.btn.btn-outline-secondary(href='/users/') 목록
       | 
-      a.btn.btn-outline-primary(href=`/users/${user._id}/edit`) Edit
+      a.btn.btn-outline-primary(href=`/users/${user._id}/edit`) 수정
       | 
-      a.btn.btn-outline-danger(href=`/users/${user._id}?_method=DELETE`) Delete
+      a.btn.btn-outline-danger(href=`/users/${user._id}?_method=DELETE`) 삭제
