--- a/views/signin.pug
+++ b/views/signin.pug
@@ -21,6 +21,11 @@ block content
             |
             | 아이디 기억
         button.btn.btn-primary.btn-block(type='submit') 로그인
+        |
+        a.btn.btn-info.btn-lg.btn-block(href='/auth/facebook')
+          i.fa.fa-facebook.fa-lg
+          | &nbsp; &nbsp;Signin with Facebook
+        hr
         div.sub 
           a(href='/users/new') 회원가입
           | 
