--- a/public/stylesheets/base.scss
+++ b/public/stylesheets/base.scss
@@ -15,7 +15,7 @@ a:hover {
 
 .jumbotron {
   margin-top: -1em;
-  background: url('/images/contest.png') no-repeat left center;
+  background: url('/images/contest.png');
   min-height: 20em;
   color: #fff;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
@@ -41,11 +41,11 @@ a:hover {
   font-size: 2.5rem;
   margin: 1em 0 0.5em 0;
   border-bottom: 1px solid #eee;
-  color: #011a72;
+  color: skyblue;
 }
 
 .header > .navbar {
-  background-color: #011a72!important;
+  background-color: skyblue !important;
 }
 
 .search-input-group{
