--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,8 +11,8 @@ a:hover {
 
 .jumbotron {
   margin-top: -1em;
-  background: url("/images/contest.png") no-repeat left center;
-  min-height: 20em;
+  background: url("/images/contest.png");
+  min-height: 25em;
   color: #fff;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
 
@@ -34,10 +34,10 @@ a:hover {
   font-size: 2.5rem;
   margin: 1em 0 0.5em 0;
   border-bottom: 1px solid #eee;
-  color: #011a72; }
+  color: skyblue; }
 
 .header > .navbar {
-  background-color: #011a72 !important; }
+  background-color: skyblue !important; }
 
 .search-input-group {
   margin: 1em 0;
