--- a/views/index.pug
+++ b/views/index.pug
@@ -3,17 +3,29 @@ extends layout
 block hero-unit
   .jumbotron
     .container
+    p 공모전 참가를 통해 여러분의 스펙을 키워보세요~
       
 block content
   .container
     .row
+    <br/>
       .col-md-6
         h3 서비스 목적
         p 본 서비스는 각종 공모전 정보와 각종 대외활동 자료를 모아놓은 정보사이트입니다.
+        <hr/>
+        .col-md-6
+        h3 서비스 사용 방법
+        p 본 서비스는 회원제로 운영되며 회원의 구분은 개인회원과 사업자 회원이 있습니다.
+        p 개인 회원은 공모전 신청만이 가능하며 공모전 등록기능은 사업자 회원만 사용 가능합니다.
+        <hr/>
       .col-md-6
         h3 주요 기능
         ul
           li 공모전 보기
-          li 공모전 등록/삭제/변경/신청
+          li 공모전 등록
+          li 공모전 삭제
+          li 공모전 변경
+          li 공모전 신청
           li 사용자 관리/인증
+          li 회원가입
 
