--- a/views/signin.pug
+++ b/views/signin.pug
@@ -24,7 +24,8 @@ block content
         |
         a.btn.btn-info.btn-lg.btn-block(href='/auth/facebook')
           i.fa.fa-facebook.fa-lg
-          | &nbsp; &nbsp;Signin with Facebook
+          | &nbsp;
+          | Signin with Facebook
         hr
         div.sub 
           a(href='/users/new') 회원가입
