--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,10 @@
 extends layout
 
 block hero-unit
+  h2 공모전을 통해 여러분의 스펙을 키워보세요~~!
   .jumbotron
     .container
-    p 공모전 참가를 통해 여러분의 스펙을 키워보세요~
-      
+
 block content
   .container
     .row
