--- a/public/stylesheets/base.scss
+++ b/public/stylesheets/base.scss
@@ -14,7 +14,7 @@ a:hover {
 }
 
 .jumbotron {
-  margin-top: 3em;
+  margin-top: -1em;
   background: url('/images/contest.png');
   min-height: 20em;
   color: #fff;
@@ -41,11 +41,11 @@ a:hover {
   font-size: 2.5rem;
   margin: 1em 0 0.5em 0;
   border-bottom: 1px solid #eee;
-  color: skyblue;
+  color: #011a72;
 }
 
 .header > .navbar {
-  background-color: skyblue !important;
+  background-color: yellowgreen !important;
 }
 
 .search-input-group{
