--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,11 +10,11 @@ a:hover {
   text-decoration: none; }
 
 .jumbotron {
-  margin-top: 3em;
+  margin-top: -1em;
   background: url("/images/contest.png");
-  min-height: 25em;
+  min-height: 20em;
   color: #fff;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);}
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
 
 .form-actions {
   padding: 19px 20px 20px;
@@ -34,10 +34,10 @@ a:hover {
   font-size: 2.5rem;
   margin: 1em 0 0.5em 0;
   border-bottom: 1px solid #eee;
-  color: skyblue; }
+  color: #011a72; }
 
 .header > .navbar {
-  background-color: skyblue !important; }
+  background-color: yellowgreen !important; }
 
 .search-input-group {
   margin: 1em 0;
@@ -85,11 +85,11 @@ a:hover {
 
 .question {
   line-height: 160%;
-  margin-bottom: 1em; }
+  margin-bottom: 2em; }
   .question .title {
     font-size: 1.3rem; }
   .question .content {
-    color: #aaa; }
+    color: #666; }
   .question .tags {
     margin: 0.5em 0; }
 
@@ -131,6 +131,21 @@ a:hover {
     padding-left: 4em; }
   .show .answer .content {
     margin-bottom: 0.5em;
-    color: #bbb; }
+    color: #888; }
+
+.question-like-btn, .answer-like-btn {
+  cursor: pointer; }
+  .question-like-btn .for-loading, .answer-like-btn .for-loading {
+    display: none; }
+  .question-like-btn.loading, .answer-like-btn.loading {
+    filter: opacity(30%);
+    cursor: wait; }
+    .question-like-btn.loading > span, .answer-like-btn.loading > span {
+      display: none; }
+    .question-like-btn.loading .for-loading, .answer-like-btn.loading .for-loading {
+      display: inline-block; }
+  .question-like-btn.disabled, .answer-like-btn.disabled {
+    color: #bbb;
+    cursor: default; }
 
 /*# sourceMappingURL=style.css.map */
