--- a/views/questions/_question.pug
+++ b/views/questions/_question.pug
@@ -1,14 +1,19 @@
 .content= question.content
+.test_object=question.test_object
+.contest_period=question.contest_period
+.staff=question.staff
+.tel=question.tel
 .tags.badges
   each tag in question.tags
     span.badge.badge-phill.badge-secondary= tag
-    | 
+
 .row
   .col-sm
     .numbers.
       #[span.number.num-votes= question.numLikes] likes,
       #[span.number.num-answers= question.numAnswers] answers,
       #[span.number.num-views= question.numReads] reads
+       
   .col-sm
     .author
       | 작성시간 #{moment(question.createdAt).format('YYYY-MM-DD')}
