--- a/views/questions/edit.pug
+++ b/views/questions/edit.pug
@@ -2,11 +2,8 @@ extends ../layout
 
 block content
   .container
-    if questions.id
-      h1.main-title 공모전 수정
-    else
-      h1.main-title 공모전 등록
+    h1.main-title 공모전 수정
     form(action=`/questions/${question.id}`, method="POST")
       input(type="hidden", name="_method", value="PUT")
       include _form
-      button.btn.btn-outline-primary(type="submit") Update Your Question
+      button.btn.btn-outline-primary(type="submit") 공모전을 수정합니다.
