--- a/views/questions/show.pug
+++ b/views/questions/show.pug
@@ -5,15 +5,19 @@ block content
     h1.main-title= question.title
 
     .question.show
+      .content= question.content
       include _question
 
-
       .buttons
-        button.btn.btn-primary #[i.fa.fa-thumbs-up] 좋아요
-        | 
-        a.btn.btn-outline-secondary(href=`/questions/${question.id}/edit`) 수정
-        | 
-        a.btn.btn-outline-danger.delete-btn(href="#", data-url=`/questions/${question.id}?_method=delete`) 삭제
+        if currentUser
+          button.btn.btn-primary.question-like-btn(data-id=question.id) 
+            span.for-loading #[i.fa.fa-spin.fa-refresh] Loading
+            span #[i.fa.fa-thumbs-up] 좋아요
+          if question.author && question.author.id == currentUser.id
+            | 
+            a.btn.btn-outline-secondary(href=`/questions/${question.id}/edit`) 수정
+            | 
+            a.btn.btn-outline-danger.need-confirm-btn(href=`/questions/${question.id}?_method=delete`) 삭제
       
     if question.numAnswers > 0
       hr
@@ -22,22 +26,12 @@ block content
         each answer in answers
           include _answer
 
-    form(action=`/questions/${question.id}/answers`, method='POST')
-      .form-group
-        label(for='answer') 문의사항
-        textarea.form-control(name="content", rows="5")
-      button.btn.btn-primary(type="submit") 문의사항을 남겨주세요.
+    if currentUser
+      form(action=`/questions/${question.id}/answers`, method='POST')
+        .form-group
+          label(for='answer') 문의사항
+          textarea.form-control(name="content", rows="5")
+        button.btn.btn-primary(type="submit") 문의사항을 남겨주세요.
 
-  script.
-    $(function() {
-      $('.delete-btn').click(function() {
-        if (confirm('Are you sure to delete?')) {
-          location = $(this).data('url');
-        }
-        return false;
-      });
-    });
 
- 
-
-  
+  script(src='/javascripts/question_client.js')
