--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -8,16 +8,17 @@ block content
       dt.col-sm-3 Email
       dd.col-sm-9
         a(href=`mailto:${user.email}`)= user.email
-
+      
       dt.col-sm-3 회원구분
       dd.col-sm-9=user.using
+
       dt.col-sm-3 Created At
       dd.col-sm-9= user.createdAt
-     
-      if user.facebook
-      dt.col-sm-3 Facebook 
-        img.img-circle(src='#{user.facebook.photo}')
-        dd.col-sm-9=user.facebook.id
+      
+      if user.facebook.id
+        dt.col-sm-3 Facebook
+        dd.col-sm-9
+          img.img-fluid.rounded-circle(src= user.facebook.photo)
 
     hr
     p
@@ -25,4 +26,4 @@ block content
       | 
       a.btn.btn-outline-primary(href=`/users/${user._id}/edit`) 수정
       | 
-      a.btn.btn-outline-danger(href=`/users/${user._id}?_method=DELETE`) 삭제
+      a.btn.btn-outline-danger.need-confirm-btn(href=`/users/${user._id}?_method=DELETE`) 삭제
