--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,6 +16,14 @@ a:hover {
   color: #fff;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
 
+h2{
+  color: blue;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  font-style: italic;
+  font-weight: bold;
+  text-align: center;
+}
+
 .form-actions {
   padding: 19px 20px 20px;
   margin-top: 20px;
