--- a/views/questions/_form.pug
+++ b/views/questions/_form.pug
@@ -19,5 +19,7 @@
 .form-group
   label(for="tel") 연락처
   input.form-control(type="text", name="tel", placeholder="연락처", value=question.tel)
- 
+.form-group
+  label(for='img') Image
+  input.form-control(type="file", name="img")
   
