--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -8,18 +8,18 @@
       #navbarsExampleDefault.collapse.navbar-collapse
         ul.navbar-nav.ml-auto
           li.nav-item
-            a.nav-link(href="/questions") 공모전 신청/등록
-          li.nav-item
-            a.nav-link(href="/users") 사용자
+            a.nav-link(href="/questions") 공모전 리스트
+         
           if (!currentUser) 
             li.nav-item
               a.nav-link(href='/signin') 로그인
             li.nav-item
               a.nav-link(href='/users/new') 회원가입
           else
+            if(currentUser._id=='5bf53dee6beedd03884a59ca')
+              li.nav-item
+                a.nav-link(href="/users") 회원 관리
             li.nav-item
-              a.nav-link(href=`/users/${currentUser._id}`) 내 프로필
+              a.nav-link(href=`/users/${currentUser._id}`) 프로필 관리
             li.nav-item
               a.nav-link(href='/signout') 로그아웃
-        
-          
