--- a/views/users/new.pug
+++ b/views/users/new.pug
@@ -9,7 +9,7 @@ block content
         input.form-control(type='text', id='name', name='name', placeholder='Your name')
       .form-group
         label(for='using') 회원구분 (개인 or 사업자)
-        input.form-control(type='using', id='using', name='using', placeholder='회원구분')
+        input.form-control(type='text', id='using', name='using', placeholder='회원구분')
       .form-group
         label(for='email') 이메일 주소
         input.form-control(type='email', id='email', name='email', placeholder='Email')
