--- a/views/questions/_form.pug
+++ b/views/questions/_form.pug
@@ -14,6 +14,9 @@
   label(for="contest_period") 공모전 기간
   input.form-control(type="text", name="contest_period", placeholder="공모전 기간을 입력해주세요.", value=question.contest_period)
 .form-group
+  label(for="sponser") 주최
+  input.form-control(type="text", name="sponser", placeholder="주최기관을 입력해주세요.", value=question.sponser)
+.form-group
   label(for="staff") 담당자
   input.form-control(type="text", name="staff", placeholder="담당자", value=question.staff)
 .form-group
