--- a/views/questions/_question.pug
+++ b/views/questions/_question.pug
@@ -1,7 +1,4 @@
-.test_object=question.test_object
-.contest_period=question.contest_period
-.staff=question.staff
-.tel=question.tel
+.content= question.content
 .tags.badges
   each tag in question.tags
     span.badge.badge-phill.badge-secondary= tag
