user password edit

--- a/views/users/new.pug
+++ b/views/users/new.pug
@@ -14,10 +14,10 @@ block content
         label(for='email') 이메일 주소
         input.form-control(type='email', id='email', name='email', placeholder='Email')
       .form-group
-        label(for='password') Password
+        label(for='password') Password (6자리 이상)
         input.form-control(type='password', id='password', name='password', placeholder='Password')
       .form-group
-        label(for='password_confirmation') Password 확인
+        label(for='password_confirmation') Password 확인 (6자리 이상)
         input.form-control(type='password', id='password_confirmation', name='password_confirmation', placeholder='Password')
       a.btn.btn-outline-secondary(href='/users') 뒤로
       | 
