--- a/views/users/edit.pug
+++ b/views/users/edit.pug
@@ -17,10 +17,10 @@ block content
         label(for='current_password') 현재 Password
         input.form-control(type='password', id='current_password', name='current_password', placeholder='Current Password')
       .form-group
-        label(for='password') Password
+        label(for='password') Password (6자리 이상)
         input.form-control(type='password', id='password', name='password', placeholder='Password')
       .form-group
-        label(for='password_confirmation') Password 확인
+        label(for='password_confirmation') Password 확인 (6자리 이상)
         input.form-control(type='password', id='password_confirmation', name='password_confirmation', placeholder='Password Confirmation')
       a.btn.btn-outline-secondary(href='javascript:window.history.back();') 뒤로
       | 
