--- a/public/stylesheets/base.scss
+++ b/public/stylesheets/base.scss
@@ -4,6 +4,7 @@ body {
   font: 1rem 'Montserrat', sans-serif;
   margin-top: 50px;
   padding-top: 1em;
+  background-image: url("/images/222.jpg");
   & > .main-content {
     min-height: 400px;
   }
@@ -13,9 +14,15 @@ a:hover {
   text-decoration: none;
 }
 
+h2{
+  text-align: center;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee;
+}
+
 .jumbotron {
-  margin-top: -1em;
-  background: url('/images/contest.png') no-repeat left center;
+  margin-top: -4em;
+  background: url('') no-repeat left center;
   min-height: 20em;
   color: #fff;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
@@ -45,7 +52,7 @@ a:hover {
 }
 
 .header > .navbar {
-  background-color: yellowgreen !important;
+  background-color: -135deg, #E4A972, #9941D8 !important;
 }
 
 .search-input-group{
