--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,16 +2,51 @@
 body {
   font: 1rem 'Montserrat', sans-serif;
   margin-top: 50px;
-  padding-top: 1em; }
+  padding-top: 1em;
+  background-image: url("/images/222.jpg");
+  background-size : 100% }
   body > .main-content {
     min-height: 400px; }
 
 a:hover {
   text-decoration: none; }
 
+h2 {
+  text-align: center;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; }
+
+h5 {
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; }
+
+h3 {
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; }
+
+h1.main-title{
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee;  
+}
+
+ul>li{
+  font-size:15px;
+  color:#eee;
+}
+
+p{
+  font-size:15px;
+  color:#eee;
+}
+
+label{
+  font-size:15px;
+  color:#eee;
+}
+
 .jumbotron {
-  margin-top: -1em;
-  background: url("/images/contest.png") no-repeat left center;
+  margin-top: -4em;
+  background: url("") no-repeat left center;
   min-height: 20em;
   color: #fff;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
@@ -37,7 +72,7 @@ a:hover {
   color: #011a72; }
 
 .header > .navbar {
-  background-color: yellowgreen !important; }
+  background-color: -135deg, #E4A972, #9941D8 !important; }
 
 .search-input-group {
   margin: 1em 0;
@@ -87,11 +122,28 @@ a:hover {
   line-height: 160%;
   margin-bottom: 2em; }
   .question .title {
-    font-size: 1.3rem; }
+    font-size: 1.3rem;
+    color:#fff; }
   .question .content {
     color: #666; }
   .question .tags {
     margin: 0.5em 0; }
+
+th{
+  color:#fff;
+}
+
+td{
+  color:#fff;
+}
+
+dt{
+  color:#fff;
+}
+
+dd{
+  color:#fff;
+}
 
 .author {
   text-align: right;
