--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
   margin-top: 50px;
   padding-top: 1em;
   background-image: url("/images/222.jpg");
-  background-size : 100% }
+background-size: 100% }
   body > .main-content {
     min-height: 400px; }
 
@@ -16,47 +16,17 @@ h2 {
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   color: #eee; }
 
-h5 {
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-  color: #eee; }
-
-h3 {
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-  color: #eee; }
-
-h1.main-title{
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-  color: #eee;  
-}
-
-ul>li{
-  font-size:15px;
-  color:#eee;
-}
-
-p{
-  font-size:15px;
-  color:#eee;
-}
-
-label{
-  font-size:15px;
-  color:#eee;
-}
+  h5 {
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+    color: #eee; }
 
 .jumbotron {
   margin-top: -4em;
-  background: url("") no-repeat left center;
+  background: url('') no-repeat left center;
   min-height: 20em;
-  color: #fff;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
-
-.form-actions {
-  padding: 19px 20px 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border-top: 1px solid #e5e5e5; }
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  }
+  
 
 .footer {
   margin-top: 1em;
@@ -122,28 +92,11 @@ label{
   line-height: 160%;
   margin-bottom: 2em; }
   .question .title {
-    font-size: 1.3rem;
-    color:#fff; }
+    font-size: 1.3rem; }
   .question .content {
     color: #666; }
   .question .tags {
     margin: 0.5em 0; }
-
-th{
-  color:#fff;
-}
-
-td{
-  color:#fff;
-}
-
-dt{
-  color:#fff;
-}
-
-dd{
-  color:#fff;
-}
 
 .author {
   text-align: right;
