--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,8 +3,7 @@ body {
   font: 1rem 'Montserrat', sans-serif;
   margin-top: 50px;
   padding-top: 1em;
-  background-image: url("/images/222.jpg");
-background-size: 100% }
+  background-image: url("/images/222.jpg"); }
   body > .main-content {
     min-height: 400px; }
 
@@ -16,17 +15,22 @@ h2 {
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   color: #eee; }
 
-  h5 {
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-    color: #eee; }
+h5 {
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; }
 
 .jumbotron {
   margin-top: -4em;
-  background: url('') no-repeat left center;
+  background: url("") no-repeat left center;
   min-height: 20em;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-  }
-  
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
+
+.form-actions {
+  padding: 19px 20px 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #e5e5e5; }
 
 .footer {
   margin-top: 1em;
