--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,7 @@ html
     script(src='/javascripts/application.js')
 
     //- socket io
-    script(src='/socket.io/socket.io.js') 
+    script(src='/socket.io/socket.io.js?ver=1') 
   body
     block top-nav
       include ./includes/topnav
