--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,8 +3,7 @@ body {
   font: 1rem 'Montserrat', sans-serif;
   margin-top: 50px;
   padding-top: 1em;
-  background-image: url("/images/222.jpg");
-  background-size: 100% }
+  background-image: url("/images/222.jpg"); }
   body > .main-content {
     min-height: 400px; }
 
@@ -15,29 +14,9 @@ h2 {
   text-align: center;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   color: #eee; }
-
   h5 {
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     color: #eee; }
-    h1.main-title {
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-      color: #eee; }
-    h3 {
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-      color: #eee; }
-    p{
-        text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-        color: #eee; }
-        ul{
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-            color: #eee; }
-            th {
-              text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-              color: #eee; }
-              td {
-                text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-                color: #eee; }
-
 
 .jumbotron {
   margin-top: -4em;
