--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-
+@import url("https://fonts.googleapis.com/css?family=Montserrat|Raleway");
 body {
   font: 1rem 'Montserrat', sans-serif;
   margin-top: 50px;
@@ -15,10 +15,14 @@ h2 {
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   color: #eee; }
 
-  h5 {
-    text-align: center;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-    color: #eee; }
+h5 {
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; }
+
+th {
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; }
+ 
 .jumbotron {
   margin-top: -4em;
   background: url("") no-repeat left center;
