--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,7 +12,7 @@ html
     script(src='/javascripts/bootstrap-notify.js')
 
     //- this application
-    link(rel='stylesheet', href='/stylesheets/style.css?ver=1')
+    link(rel='stylesheet', href='/stylesheets/style1.css?ver=1')
     script(src='/javascripts/application.js')
 
     //- socket io
