--- a/public/stylesheets/style1.css
+++ b/public/stylesheets/style1.css
@@ -15,6 +15,10 @@ h2 {
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   color: #eee; }
 
+  h5 {
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+    color: #eee; }
+
 .jumbotron {
   margin-top: -4em;
   background: url("") no-repeat left center;
