--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,8 @@ body {
   font: 1rem 'Montserrat', sans-serif;
   margin-top: 50px;
   padding-top: 1em;
-  background-image: url("/images/222.jpg"); }
+  background-image: url("/images/222.jpg");
+  background-size: 100%; }
   body > .main-content {
     min-height: 400px; }
 
