--- a/public/stylesheets/style_edit.css
+++ b/public/stylesheets/style_edit.css
@@ -3,7 +3,8 @@ body {
   font: 1rem 'Montserrat', sans-serif;
   margin-top: 50px;
   padding-top: 1em;
-  background-image: url("/images/222.jpg"); }
+  background-image: url("/images/222.jpg");
+  background-size: 100%; }
   body > .main-content {
     min-height: 400px; }
 
@@ -15,9 +16,52 @@ h2 {
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   color: #eee; }
 
-  h5 {
+h5 {
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; }
+
+h3 {
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; } 
+
+th {
+  background-color: #ffffff;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: black; }
+
+td {
+  background-color: #ffffff;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: black; }
+
+p {
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; } 
+
+h1.main-title {
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee; } 
+
+li{
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee;
+} 
+
+label{
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-    color: #eee; }
+    color: #eee; 
+}
+
+dt{
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee;
+}
+
+dd{
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  color: #eee;
+}
+   
 
 .jumbotron {
   margin-top: -4em;
