duplicate error fixing

--- a/public/stylesheets/style_edit.css
+++ b/public/stylesheets/style_edit.css
@@ -4,7 +4,9 @@ body {
   margin-top: 50px;
   padding-top: 1em;
   background-image: url("/images/222.jpg");
-  background-size: 100%; }
+  background-size: cover;
+  min-height: 100%;
+  background-repeat: no-repeat;  }
   body > .main-content {
     min-height: 400px; }
 
@@ -77,7 +79,7 @@ dd{
   border-top: 1px solid #e5e5e5; }
 
 .footer {
-  margin-top: 1em;
+  margin-top: 15em;
   padding-top: 1em;
   color: #aaa;
   border-top: .05rem solid #e5e5e5; }
