--- a/views/index.pug
+++ b/views/index.pug
@@ -20,6 +20,7 @@ block content
         h5 서비스 사용 방법
         p 본 서비스는 회원제로 운영되며 회원의 구분은 개인회원과 사업자 회원이 있습니다.
         p 개인 회원은 공모전 신청만이 가능하며 공모전 등록기능은 사업자 회원만 사용 가능합니다.
+        p 로그인 시 공모전 세부정보를 볼 수 있습니다.
         p 관리자 계정으로 로그인 시 모든 사용자 조회 및 모든 공모전 수정,변경 가능합니다.
         <hr/>
       .col-xs-6
