--- a/views/questions/_question.pug
+++ b/views/questions/_question.pug
@@ -7,6 +7,7 @@
   .col-sm
     .numbers.
       #[span.number.num-votes= question.numLikes] likes,
+      #[span.number.num-votes= question.numdisLikes] dislikes,
       #[span.number.num-answers= question.numAnswers] answers,
       #[span.number.num-views= question.numReads] reads
        
