--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,7 @@ html
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js')
     //- Notify 라이브러리 import: http://bootstrap-notify.remabledesigns.com/ 
     script(src='/javascripts/bootstrap-notify.js')
+    script(src="https://www.google.com/recaptcha/api.js")
 
     //- this application
     link(rel='stylesheet', href='/stylesheets/style_edit.css?ver=1')
